<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OrdenDeArrestoActivity" >
    
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    
	    <TextView
	        android:id="@+id/titulo_pais"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/titulo_pais" />

	    <TextView 
	        android:id="@+id/pais_actual"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	    
	</LinearLayout>
			    
    <TextView 
        android:id="@+id/orden_emitida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        
    <TextView
	    android:id="@+id/emitir_orden"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/emitir_orden" />
    
    <Spinner 
        android:id="@+id/lista_villanos"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent" />
    
    <Button
	        android:id="@+id/btn_pedir_orden"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/pedir_orden" />
    
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:gravity="center_horizontal">

	    <Button
	        android:id="@+id/btn_ir_viajar"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_ir_viajar" />
	
	    <Button
	        android:id="@+id/btn_ir_pistas"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_ir_pistas" />

	</LinearLayout>

</LinearLayout>
